meego-keyboard (0.7.19~1) unstable; urgency=low

  * Fixes: NB#280695 - Thai above and below characters on numbers etc
  * Fixes: NB#289053 - Thai VKB is missing "ฎ" and duplicates "ฏ"
  * Fixes: NB#287913 - [TASK] VKB layouts are not shown as per spec.

 -- Aapo Kojo <aapo.kojo@nokia.com>  Wed, 02 Nov 2011 09:28:07 +0200

meego-keyboard (0.7.18-1) unstable; urgency=low

  * Fixes: NB#285309 - No way to input Western Arabic numerals

 -- Aapo Kojo <aapo.kojo@nokia.com>  Tue, 01 Nov 2011 10:33:33 +0200

meego-keyboard (0.7.17-1) unstable; urgency=low

  * Fixes: NB#277439 - Above and below Thai characters input consecutively go above each other
  * Fixes NB#284540 - The Candidate words is showed next Plugin.
  * Fixes NB#281474 - Word suggestion list is disappearing when the finger is lifted from the keyboard after long tapping on the space key.
  * Fixes NB#285711 - Accent popup shows two active keys sometimes
  * Fixes NB#281156 - [hwkb] N950 Hardware SYM key causes virtual keyboard to print button label

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Mon, 24 Oct 2011 10:57:24 +0300

meego-keyboard (0.7.16-1) unstable; urgency=low

  * Fixes: NB#280274 - Input methods: 'permille' symbol in keyboard displayed instead of 'section of a law' symbol in Kazakh language
  * Fixes: NB#282901 - Contact > while editing a contact, Arabic digits appears instead of Hindic on the keypad
  * Fixes: NB#284004 - Vietnamese VKB is shown as truncated in landscape mode & some keys are missing in portrait mode.
  * Fixes: NB#268106 - Accents in Thai layouts are not aligned correctly inside a key/pop-up menu
  * Fixes: NB#272715 - Dead key VKB layout is retaining in a scenario.

 -- Aapo Kojo <aapo.kojo@nokia.com>  Wed, 12 Oct 2011 09:28:00 +0300

meego-keyboard (0.7.15-2) unstable; urgency=low

  * New release

 -- Aapo Kojo <aapo.kojo@nokia.com>  Fri, 30 Sep 2011 14:41:27 +0300

meego-keyboard (0.7.15-1) unstable; urgency=low
