@@ -3,6 +3,7 @@ meego-keyboard (0.7.19~1) unstable; urgency=low
   * Fixes: NB#280695 - Thai above and below characters on numbers etc
   * Fixes: NB#289053 - Thai VKB is missing "ฎ" and duplicates "ฏ"
   * Fixes: NB#287913 - [TASK] VKB layouts are not shown as per spec.
+  * Fixes: NB#284151 - [TASK] ImhPreferNumbers does not open page 2 on virtual keyboard
 
  -- Aapo Kojo <aapo.kojo@nokia.com>  Wed, 02 Nov 2011 09:28:07 +0200
 
